# rasyti

./: Cargo.toml  LICENSE  README.md  index.html  index.js  index.php  indexbig.html  indexbig.php  info.html  main.js  package.json  remarks.html  renderer.js  tauri.conf.json
.github/workflows/: action.yml  build.yaml
css/: keyboard.css  keyboardbig.css  keyboardsmall.css  layout.css  rasyti.css  rasytibig.css  rasytismall.css  style.css  style2.css
docs/: LICENSE  README.md  index.html  index.js  indexbig.html  info.html  package.json  remarks.html
docs/css/: keyboard.css  keyboardbig.css  rasyti.css  rasytibig.css  rasytismall.css  style.css
docs/layouts/: cyrillic.xml  qwerty.xml
docs/lessons/: brazilian.rasyti.xml  croatian.rasyti.xml  czech.rasyti.xml  dvorak_es.rasyti.xml  farsi.rasyti.xml  finnish.rasyti.xml  french.rasyti.xml  german.rasyti.xml  greek.rasyti.xml  greek2.rasyti.xml  greek3.rasyti.xml  irishgaelic.rasyti.xml  latvian.rasyti.xml  lithuanian.rasyti.xml  maltese.rasyti.xml  nederlands.rasyti.xml  portuguese.rasyti.xml  romanian.rasyti.xml  slovenian.rasyti.xml  spanish.rasyti.xml  swedish.rasyti.xml  (+1 more)
include/: index_content.php  index_gamelink.php
js/: rasyti.js
layouts/: cyrillic.xml  qwerty.xml  qwertz.xml
lessons/: brazilian.rasyti.xml  catalan.rasyti.xml  croatian.rasyti.xml  croatian.typist.xml  english.rasyti.xml  estonian.rasyti.xml  french.rasyti.xml  german.rasyti.xml  portuguese.rasyti.xml  slovak.rasyti.xml  spanish2.rasyti.xml
node/: Cargo.toml
src/: main.js  package.json
typinggame/: index.html  style.css
(+12 files in other folders)
